# snowflake-mcp

./: CHANGELOG.md  CLAUDE.md  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml  test-and-release.yml
mcp_server_snowflake/: server.py
mcp_server_snowflake/object_manager/: tools.py
mcp_server_snowflake/query_manager/: tools.py
mcp_server_snowflake/tests/: test_query_comment.py  test_query_manager.py
services/: configuration.yaml
