[project]
name = "notion-snowflake-mcp"
version = "1.3.0"
description = "MCP server for Snowflake (Notion fork)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Carlos Serrano" },
  { name = "Jason Summer" },
  { name = "Tyler White" },
]
dependencies = [
    "fastmcp>=2.8.1,<3.0.0",
    "mcp[cli]>=1.9.4,<2.0.0",
    "pydantic>=2.11.4,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "requests>=2.32.3,<3.0.0",
    "snowflake-connector-python>=3.15.0,<4.0.0",
    "snowflake-core>=1.0.0,<2.0.0",
    "sqlglot>=27.8.0,<30.0.0",
]

[project.urls]
Repository = "https://github.com/Snowflake-Labs/mcp.git"
Issues = "https://github.com/Snowflake-Labs/mcp/issues"

[dependency-groups]
dev = [
    "fast-agent-mcp>=0.2.24,<2.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "pyright>=1.1.402,<2.0.0",
    "pytest>=8.3.5,<9.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "ruff>=0.11.8,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_snowflake"]

[project.scripts]
mcp-server-snowflake = "mcp_server_snowflake:main"
notion-snowflake-mcp = "mcp_server_snowflake:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build --wheel
"""
major_on_zero = false
tag_format = "v{version}"
commit_parser = "angular"
commit_message = "chore(release): notion-snowflake-mcp v{version}"
upload_to_vcs_release = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false

[tool.semantic_release.branches.release]
match = "notion-snowflake-mcp/release-.*"
prerelease = false
